# fastapi-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/tests/: test_calculator.py
vv/: pyvenv.cfg
vv/Scripts/: activate  activate.bat
