[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapicalculator"
version = "0.0.1"
description = "fastapi calculator demonstrating 12 FA"
authors = [
  { name = "utsav" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fastapicalculator"]
include = ["pyproject.toml", "fastapicalculator/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fastapicalculator"]
force-sort-within-sections = true

